# serializer version: 1
# name: test_user_multiple_choice_field_fails_to_validate_chip_value_nonexisting_users
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="10" m-user-multiple-choice>
    
      
        
          <li m-user-multiple-choice-item>
            <input type="hidden" name="users_chip" value="John">
            <button class="form-chips-control-item-not-found" type="button" aria-label="Remove this user">
              <span class="form-chips-control-item-not-found-icon">
                <span class="material-icon">person_outline</span>
              </span>
              <span class="form-chips-control-item-name">
                John
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1000">
            <input type="hidden" name="users_chip" value="Admin_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Admin_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item>
            <input type="hidden" name="users_chip" value="Doe">
            <button class="form-chips-control-item-not-found" type="button" aria-label="Remove this user">
              <span class="form-chips-control-item-not-found-icon">
                <span class="material-icon">person_outline</span>
              </span>
              <span class="form-chips-control-item-name">
                Doe
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_fails_to_validate_text_value_nonexisting_users
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="10" m-user-multiple-choice>
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="John Admin_User Doe" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_cleaned_data_for_chip_field
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice>
    
      
        
          <li m-user-multiple-choice-item m-user-id="1000">
            <input type="hidden" name="users_chip" value="Admin_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Admin_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1001">
            <input type="hidden" name="users_chip" value="Moderator">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Moderator
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1002">
            <input type="hidden" name="users_chip" value="User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1003">
            <input type="hidden" name="users_chip" value="Other_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Other_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_cleaned_data_for_text_field
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice>
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="Admin_User Moderator User Other_User" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_data_for_chip_field
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice>
    
      
        
          <li m-user-multiple-choice-item m-user-id="1000">
            <input type="hidden" name="users_chip" value="Admin_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Admin_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1001">
            <input type="hidden" name="users_chip" value="Moderator">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Moderator
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1002">
            <input type="hidden" name="users_chip" value="User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1003">
            <input type="hidden" name="users_chip" value="Other_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Other_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_data_for_text_field
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice>
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="Admin_User Moderator User Other_User" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_field_initial_data
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice>
    
      
        
          <li m-user-multiple-choice-item m-user-id="1000">
            <input type="hidden" name="users_chip" value="Admin_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Admin_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1001">
            <input type="hidden" name="users_chip" value="Moderator">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Moderator
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1002">
            <input type="hidden" name="users_chip" value="User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1003">
            <input type="hidden" name="users_chip" value="Other_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Other_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="Admin_User Moderator User Other_User" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_form_initial_data
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice>
    
      
        
          <li m-user-multiple-choice-item m-user-id="1000">
            <input type="hidden" name="users_chip" value="Admin_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Admin_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1001">
            <input type="hidden" name="users_chip" value="Moderator">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Moderator
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1002">
            <input type="hidden" name="users_chip" value="User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
        
          <li m-user-multiple-choice-item m-user-id="1003">
            <input type="hidden" name="users_chip" value="Other_User">
            <button class="form-chips-control-item" type="button" aria-label="Remove this user">
              <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
              <span class="form-chips-control-item-name">
                Other_User
              </span>
              <span class="form-chips-control-item-close-icon">
                <span class="material-icon">clear</span>
              </span>
            </button>
          </li>
        
      
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="Admin_User Moderator User Other_User" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
# name: test_user_multiple_choice_field_renders_without_data
  '''
  <ul class="form-chips-control d-js-flex" maxchoices="5" m-user-multiple-choice>
    
    <li>
      <input type="text" class="form-chips-control-input" id="id_users" m-user-multiple-choice-input>
    </li>
  </ul>
  <noscript>
    <input type="text" class="form-control" id="id_users_text" name="users_text" value="" >
  </noscript>
  <template id="m-user-multiple-choice-template">
    <li m-user-multiple-choice-item>
      <input type="hidden" name="users_chip" value="">
      <button class="form-chips-control-item" type="button" aria-label="Remove this choice">
        <img class="form-chips-control-item-image" src="" alt="">
        <span class="form-chips-control-item-name">
          <slot name="username"></slot>
        </span>
        <span class="form-chips-control-item-close-icon">
          <span class="material-icon">clear</span>
        </span>
      </button>
    </li>
  </template>
  '''
# ---
